--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "vitesse-webext",
-  "displayName": "Vitesse WebExt",
+  "name": "instapeace",
+  "displayName": "Instapeace",
   "version": "0.0.1",
   "private": true,
   "packageManager": "pnpm@7.29.0",
-  "description": "[description]",
+  "description": "Be in control of what you want to focus on while browsing instagram.",
+  "author": {
+    "email": "imchris@tuta.io",
+    "name": "Christofer Koeth",
+    "url": "http://christoferkoeth.surge.sh"
+  },
   "scripts": {
     "dev": "npm run clear && cross-env NODE_ENV=development run-p dev:*",
     "dev:prepare": "esno scripts/prepare.ts",
@@ -18,11 +23,12 @@
     "pack:zip": "rimraf extension.zip && jszip-cli add extension/* -o ./extension.zip",
     "pack:crx": "crx pack extension -o ./extension.crx",
     "pack:xpi": "cross-env WEB_EXT_ARTIFACTS_DIR=./ web-ext build --source-dir ./extension --filename extension.xpi --overwrite-dest",
-    "start:chromium": "web-ext run --source-dir ./extension --target=chromium",
+    "start:chromium": "cd ./extension && dotenv  -- web-ext run  --target=chromium --chromium-binary $CHROMIUM_BINARY%",
     "start:firefox": "web-ext run --source-dir ./extension --target=firefox-desktop",
     "clear": "rimraf --glob extension/dist extension/manifest.json extension.*",
     "lint": "eslint --cache .",
-    "test": "vitest test"
+    "test": "vitest test",
+    "testapp": "vite ./test_frontend/ --config ./test_frontend/vite.config.ts"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.36.0",
@@ -39,13 +45,21 @@
     "chokidar": "^3.5.3",
     "cross-env": "^7.0.3",
     "crx": "^5.0.1",
+    "dotenv": "^16.0.3",
+    "dotenv-cli": "^7.2.1",
     "eslint": "^8.35.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-import-resolver-typescript": "^3.5.4",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-unicorn": "^46.0.0",
     "esno": "^0.16.3",
     "fs-extra": "^11.1.0",
     "jsdom": "^21.1.0",
     "kolorist": "^1.7.0",
     "npm-run-all": "^4.1.5",
+    "prettier": "^2.8.7",
     "rimraf": "^4.3.0",
+    "type-fest": "^3.7.2",
     "typescript": "^4.9.5",
     "unocss": "^0.50.4",
     "unplugin-auto-import": "^0.15.1",
@@ -59,11 +73,11 @@
     "webextension-polyfill": "^0.10.0"
   },
   "dependencies": {
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-import-resolver-typescript": "^3.5.4",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-unicorn": "^46.0.0",
-    "prettier": "^2.8.7",
-    "type-fest": "^3.7.2"
+    "@vue/tsconfig": "^0.1.3",
+    "fp-ts": "^2.13.1",
+    "jquery": "^3.6.4",
+    "pinia": "^2.0.33",
+    "vue-router": "^4.1.6",
+    "vue-tsc": "^1.2.0"
   }
 }
