--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "fp-ts": "^2.13.1",
     "jquery": "^3.6.4",
     "pinia": "^2.0.33",
+    "ts-pattern": "^4.2.2",
     "vue-router": "^4.1.6",
     "vue-tsc": "^1.2.0"
   }
