--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
   "dependencies": {
     "@vue/tsconfig": "^0.1.3",
     "fp-ts": "^2.13.1",
+    "immer": "^9.0.21",
     "jquery": "^3.6.4",
     "pinia": "^2.0.33",
     "ts-pattern": "^4.2.2",
