--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "displayName": "Instapeace",
   "version": "0.0.1",
   "private": true,
-  "packageManager": "pnpm@7.29.0",
-  "description": "Be in control of what you want to focus on while browsing instagram.",
+  "packageManager": "pnpm@8.2.0",
+  "description": "Be in control of your focus while browsing instagram.",
   "author": {
     "email": "imchris@tuta.io",
     "name": "Christofer Koeth",
-    "url": "http://christoferkoeth.surge.sh"
+    "url": "https://github.com/Visual-Dawg/instapeace"
   },
   "scripts": {
     "dev": "npm run clear && cross-env NODE_ENV=development run-p dev:*",
@@ -28,7 +28,8 @@
     "clear": "rimraf --glob extension/dist extension/manifest.json extension.*",
     "lint": "eslint --cache .",
     "test": "vitest test",
-    "testapp": "vite ./test_frontend/ --config ./test_frontend/vite.config.ts"
+    "testapp": "vite ./test_frontend/ --config ./test_frontend/vite.config.ts",
+    "testapp:xlang": "cross-env VITE_LANG=xx vite ./test_frontend/ --config ./test_frontend/vite.config.ts"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.36.0",
@@ -41,6 +42,7 @@
     "@unocss/reset": "^0.50.4",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/test-utils": "^2.3.0",
+    "@vue/tsconfig": "^0.1.3",
     "@vueuse/core": "^9.13.0",
     "chokidar": "^3.5.3",
     "cross-env": "^7.0.3",
@@ -66,20 +68,20 @@
     "unplugin-icons": "^0.15.3",
     "unplugin-vue-components": "^0.24.0",
     "vite": "^4.1.4",
-    "vitest": "^0.29.2",
+    "vite-plugin-html-env": "^1.2.7",
     "vue": "^3.2.47",
-    "web-ext": "^7.5.0",
+    "vue-tsc": "^1.2.0",
+    "web-ext": "^7.6.1",
     "webext-bridge": "^5.0.5",
     "webextension-polyfill": "^0.10.0"
   },
   "dependencies": {
-    "@vue/tsconfig": "^0.1.3",
     "fp-ts": "^2.13.1",
     "immer": "^9.0.21",
     "jquery": "^3.6.4",
     "pinia": "^2.0.33",
+    "remeda": "^1.12.0",
     "ts-pattern": "^4.2.2",
-    "vue-router": "^4.1.6",
-    "vue-tsc": "^1.2.0"
+    "vue-router": "^4.1.6"
   }
 }
